2005-08-04  John McCutchan  <ttb@tentacle.dhs.org>

	* server/Makefile.am: Compile gam_eq.c
	* server/gam_connection.c: (gam_connection_close),
	(gam_connection_eq_flush), (gam_connection_new), (gam_queue_event):
	* server/gam_connection.h: Hookup the event queue. BUT, It's not used yet.
	* server/gam_eq.c: (gam_eq_event_new), (gam_eq_event_free),
	(gam_eq_new), (gam_eq_free), (gam_eq_queue), (gam_eq_size),
	(gam_eq_flush_callback), (gam_eq_flush):
	* server/gam_eq.h:
	An event queue that will be per-connection when finished. Provides limited
	but effective flow control. 
	* server/gam_poll.c: (poll_file): Enable poll limiter now that we have
	proper defaults for local filesystems.

2005-08-03  John McCutchan  <ttb@tentacle.dhs.org>

	* server/gam_fs.c: (gam_fs_init): Tweak defaults yet again.

2005-08-03  John McCutchan  <ttb@tentacle.dhs.org>

	* server/Makefile.am:
	* server/gam_conf.c: (gam_conf_string_to_mon_type),
	(gam_conf_read_internal), (gam_conf_read): Move gaminrc parsing code here
	* server/gam_conf.h: Move gaminrc parsing code here
	* server/gam_excludes.c: (gam_exclude_init), (gam_exclude_check),
	(gam_exclude_debug): Make gam_exclude_add public. Add gam_exclude_debug.
	Removed config parsing code from here.
	* server/gam_excludes.h: Make gam_exclude_add public.
	* server/gam_fs.c: Adjust default poll timeout to be 0.
	* server/gam_server.c: (gam_show_debug), (gam_init_subscriptions): call
	gam_exclude_debug() in show_debug() and call gam_conf_read at beginning of
	server initialization.

2005-08-02  John McCutchan <jmc@cvs.gnome.org>

	* server/gam_fs.c: (gam_fs_init): Change some defaults
	* server/gam_inotify.c: (gam_inotify_data_debug),
	(gam_inotify_debug), (mask_to_string), (mask_to_gam_event),
	(gam_inotify_data_new), (gam_inotify_data_free),
	(gam_inotify_event_new), (gam_inotify_event_free),
	(gam_inotify_mask_to_gam_file_event),
	(gam_inotify_mask_to_gam_dir_event), (gam_inotify_emit_one_event),