@@ -1,5 +1,14 @@
 2005-08-04  John McCutchan  <ttb@tentacle.dhs.org>
 
+	* server/gam_inotify.c: (gam_inotify_is_running):
+	* server/gam_inotify.h: Add gam_inotify_is_running. Returns TRUE when
+	the inotify backend is being used.
+	* server/gam_server.c: (gam_server_emit_one_event): Use gam_queue_event
+	when gam_inotify_is_running() == TRUE. This should not effect the dnotify
+	behaviour.
+
+2005-08-04  John McCutchan  <ttb@tentacle.dhs.org>
+
 	* server/Makefile.am: Compile gam_eq.c
 	* server/gam_connection.c: (gam_connection_close),
 	(gam_connection_eq_flush), (gam_connection_new), (gam_queue_event):
